<resources>
    <string name="app_name" translatable="false">Runner</string>
    <string name="title_home">Home</string>
    <string name="title_runner">Run</string>
    <string name="title_terminal">Terminal</string>
    <string name="title_proc">Proc</string>
    <string name="title_settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="command">Command</string>
    <string name="reduce_perm">Reduced permissions</string>
    <string name="keep_alive">Keep it alive</string>
    <string name="target_perm_hint" translatable="false">UID[,GID[,Groups...]]</string>
    <string name="kill">Kill</string>
    <string name="kill_process_ask">Kill this process?</string>
    <string name="executing">Executing…</string>
    <string name="finish">Finish</string>
    <string name="return_info">Return value: %d(%s)</string>
    <string name="pid_info" translatable="false">PID: %d</string>
    <string name="normal">Normal</string>
    <string name="command_not_found">Command not found</string>
    <string name="segmentation_error">Segmentation error</string>
    <string name="ctrl_c_exit">Ctrl+C was used</string>
    <string name="other_error">Other error</string>
    <string name="service_is_running">Service is running</string>
    <string name="service_not_running">Service is not running</string>
    <string name="service_version">Version %1$d</string>
    <string name="shizuku_is_running">Shizuku is running</string>
    <string name="shizuku_not_running">Shizuku is not running</string>
    <string name="shizuku_version">Version %2$s, %1$s</string>
    <string name="copied_info">Copied to clipboard:</string>
    <string name="copy_name">Copy Name</string>
    <string name="copy_command">Copy Command</string>
    <string name="create_below">Create below</string>
    <string name="delete">Delete</string>
    <string name="kill_all_processes">Kill all processes?</string>
    <string name="backup">Backup</string>
    <string name="export_data">Export Data</string>
    <string name="export_data_summary">Export the data to tar package</string>
    <string name="import_data">Import Data</string>
    <string name="import_data_summary">Import backup data</string>
    <string name="env_manage">Environment manage</string>
    <string name="env_manage_summary">These environment configs will be loaded before executing the command.</string>
    <string name="force_kill">Force kill processes</string>
    <string name="force_kill_summary">This does not allow the process to exit gracefully, bypassing the cleanup mechanism. Do not enable this under normal circumstances.</string>
    <string name="kill_child_processes">Kill all child processes</string>
    <string name="kill_child_processes_summary">That may have unintended consequences.</string>
    <string name="help">Help</string>
    <string name="copy">Copy</string>
    <string name="parse_json_data_error">Can not parse JSON data</string>
    <string name="data_ver_low">The JSON data version is too low</string>
    <string name="not_app_data">It is not App data</string>
    <string name="data_error">Data error</string>
    <string name="decode_error">Decode data error</string>
    <string name="theme">Theme</string>
    <string name="theme_color">Theme color</string>
    <string name="theme_color_system">System theme color</string>
    <string name="pure_black_dark_theme">Black dark theme</string>
    <string name="pure_black_dark_theme_summary">Use the pure black theme if dark theme is enabled</string>
    <string name="color_red">Red</string>
    <string name="color_pink">Pink</string>
    <string name="color_purple">Purple</string>
    <string name="color_deep_purple">Deep purple</string>
    <string name="color_indigo">Indigo</string>
    <string name="color_blue">Blue</string>
    <string name="color_light_blue">Light blue</string>
    <string name="color_cyan">Cyan</string>
    <string name="color_teal">Teal</string>
    <string name="color_green">Green</string>
    <string name="color_light_green">Light green</string>
    <string name="color_lime">Lime</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_amber">Amber</string>
    <string name="color_orange">Orange</string>
    <string name="color_deep_orange">Deep orange</string>
    <string name="color_brown">Brown</string>
    <string name="color_blue_grey">Blue grey</string>
    <string name="stop_server">Stop server</string>
    <string name="about">About</string>
    <string name="warning">Warning</string>
    <string name="error">Error</string>
    <string name="app_crashed">App crashed</string>
    <string name="confirm_stop_server">Confirm to stop server?</string>
    <string name="can_not_stop_server">Cannot stop server</string>
    <string name="choose_start_server">Select a startup method</string>
    <string name="start">Start</string>
    <string name="exec_start_server_command">Execute the command as the Root/Shell/ADB user</string>
    <string name="about_view_source_code"><![CDATA[View source code at %1$s]]></string>
    <string name="add">Add</string>
    <string name="grant_shizuku_permission">Grant Shizuku permissions</string>
    <string name="grant_shizuku_permission_summary">You have not granted Shizuku permissions, so the user service cannot be started.</string>
    <string name="grant">Grant</string>
    <string name="install">Install</string>
    <string name="reinstall">Reinstall</string>
    <string name="remove">Remove</string>
    <string name="term_ext_summary">Provide external extension commands</string>
    <string name="term_ext_title">Terminal Extension</string>
    <string name="term_ext_title_installed">Terminal Extension (Installed)</string>
    <string name="term_ext_version">Version: %s (%d)\nABI: %s</string>
    <string name="empty">Empty</string>
    <string name="pick_term_ext">Pick terminal extension</string>
    <string name="install_term_ext">Install terminal extension</string>
    <string name="will_remove_term_ext">Remove terminal extension?</string>
    <string name="failed_to_get_the_process_list">Failed to get the process list</string>
    <string name="more" translatable="false">...</string>
    <string name="value">Value</string>
    <string name="key">Key</string>
    <string name="auto_start_exec">Start on boot and run commands</string>
    <string name="auto_start_exec_summary">Launch at startup and auto-run commands upon service connection</string>
    <string name="startup_script">The command to be executed</string>
    <string name="click_edit">Click and edit</string>
    <string name="app_settings">App Settings</string>
    <string name="database">Database</string>
    <string name="terminal_home">Terminal Home</string>
    <string name="terminal_usr">Terminal Usr</string>
    <string name="select_backup_data">Select the data to be backed up</string>
    <string name="backup_started">Backup started in the background.</string>
    <string name="import_data_confirm">This will overwrite all current settings and data. Are you sure you want to continue?</string>
    <string name="restore_completed">Restore completed. The app will now restart.</string>
    <string name="add_shortcut">Add a shortcut</string>
    <string name="waiting_service">Waiting Service…</string>
    <string name="exec_command">Exec command</string>
    <string name="application_terminal">Terminal Emulator</string>
    <string name="preferences">Preferences</string>
    <string name="new_window">New window</string>
    <string name="close_window">Close window</string>
    <string name="window_list">Windows</string>
    <string name="prev_window">Prev window</string>
    <string name="next_window">Next window</string>
    <string name="reset">Reset term</string>
    <string name="send_email">Email to</string>
    <string name="special_keys">Special keys</string>
    <string name="toggle_soft_keyboard">Toggle soft keyboard</string>
    <string name="reset_toast_notification">This window\'s terminal state has been reset.</string>
    <string name="enable_wakelock">Take WakeLock</string>
    <string name="disable_wakelock">Drop WakeLock</string>
    <string name="enable_wifilock">Take WifiLock</string>
    <string name="disable_wifilock">Drop WifiLock</string>
    <string name="edit_text">Edit text</string>
    <string name="select_text">Select text</string>
    <string name="copy_all">Copy all</string>
    <string name="paste">Paste</string>
    <string name="send_control_key">Send control key</string>
    <string name="send_fn_key">Send fn key</string>
    <string name="window_title">Window %1$d</string>
    <string name="service_notify_text">Terminal session is running</string>
    <string name="process_exit_message">Terminal session finished</string>
    <string name="screen_preferences">Screen</string>
    <string name="title_statusbar_preference">Status bar</string>
    <string name="summary_statusbar_preference">Show/hide status bar.</string>
    <string name="dialog_title_statusbar_preference">Status bar</string>
    <string name="title_actionbar_preference">Action bar</string>
    <string name="summary_actionbar_preference">Choose the action bar\'s behavior (Android 3.0 and up).</string>
    <string name="dialog_title_actionbar_preference">Action bar behavior</string>
    <string name="title_orientation_preference">Screen orientation</string>
    <string name="summary_orientation_preference">Choose the screen orientation behavior.</string>
    <string name="dialog_title_orientation_preference">Screen orientation behavior</string>
    <string name="title_cursorstyle_preference">Cursor style</string>
    <string name="summary_cursorstyle_preference">Choose cursor style.</string>
    <string name="dialog_title_cursorstyle_preference">Cursor style</string>
    <string name="title_cursorblink_preference">Cursor blink</string>
    <string name="summary_cursorblink_preference">Choose cursor blink.</string>
    <string name="dialog_title_cursorblink_preference">Cursor blink</string>
    <string name="text_preferences">Text</string>
    <string name="title_utf8_by_default_preference">Default to UTF-8</string>
    <string name="summary_utf8_by_default_preference">Whether UTF-8 mode is enabled by default.</string>
    <string name="title_fontsize_preference">Font size</string>
    <string name="summary_fontsize_preference">Choose character height in points.</string>
    <string name="dialog_title_fontsize_preference">Font size</string>
    <string name="title_color_preference">Colors</string>
    <string name="summary_color_preference">Choose text color.</string>
    <string name="dialog_title_color_preference">Text color</string>
    <string name="keyboard_preferences">Keyboard</string>
    <string name="title_backaction_preference">Back button behavior</string>
    <string name="summary_backaction_preference">Choose what pressing the back button does.</string>
    <string name="dialog_title_backaction_preference">Back button behavior</string>
    <string name="title_controlkey_preference">Control key</string>
    <string name="summary_controlkey_preference">Choose control key.</string>
    <string name="dialog_title_controlkey_preference">Control key</string>
    <string name="title_fnkey_preference">Fn key</string>
    <string name="summary_fnkey_preference">Choose Fn key.</string>
    <string name="dialog_title_fnkey_preference">Fn key</string>
    <string name="title_ime_preference">Input method</string>
    <string name="summary_ime_preference">Choose input method for soft keyboard.</string>
    <string name="dialog_title_ime_preference">Input method</string>
    <string name="shell_preferences">Shell</string>
    <string name="title_shell_preference">Command line</string>
    <string name="summary_shell_preference">Specify the shell command line.</string>
    <string name="dialog_title_shell_preference">Shell</string>
</resources>