<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="15dp"
    android:paddingStart="25dp"
    android:paddingEnd="0dp"
    android:orientation="vertical">

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/app_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_settings"
        android:checked="true" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/data_db"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/database"
        android:checked="true" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/term_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terminal_home"
        android:checked="true" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/term_usr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terminal_usr"
        android:checked="true" />

</LinearLayout>