<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="?homeCardStyle"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@android:id/icon"
            style="@style/CardIcon"
            android:duplicateParentState="true"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_settings_outline_24" />

        <TextView
            style="@style/CardTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/home_icon_padding"
            android:layout_weight="1"
            android:text="@string/grant_shizuku_permission" />

    </LinearLayout>

    <TextView
        android:id="@android:id/text1"
        style="@style/CardContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/grant_shizuku_permission_summary" />

    <com.google.android.material.button.MaterialButton
        android:id="@android:id/button1"
        style="@style/CardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grant"
        app:icon="@drawable/ic_play_arrow_outline_24" />

</LinearLayout>
